--- a/static/css/login.css
+++ b/static/css/login.css
@@ -56,3 +56,9 @@ p a {
 p a:hover {
     text-decoration: underline;
 }
+
+.error {
+    color: red;
+    font-size: 0.9rem;
+    margin-bottom: 10px;
+}
