--- a/templates/login.html
+++ b/templates/login.html
@@ -6,12 +6,13 @@
     <title>Login - Manatracker</title>
     <link rel="stylesheet" href="../static/css/styles.css">
     <link rel="stylesheet" href="../static/css/login.css">
+ 
 </head>
 <body>
-    
     <div class="container">
-        <h1>Login to Manatracker</h1>
+        <h1>Login</h1>
         <form action="/login" method="POST">
+           
             <div class="form-group">
                 <label for="email">Email:</label>
                 <input type="email" id="email" name="email" placeholder="Enter your email" required>
@@ -20,9 +21,15 @@
                 <label for="password">Password:</label>
                 <input type="password" id="password" name="password" placeholder="Enter your password" required>
             </div>
-            <button type="submit" class="button login">Login</button>
+             <!-- Mostrar mensaje de error si existe -->
+             {% if error %}
+             <div class="error">{{ error }}</div>
+             {% endif %}
+            <button type="submit" class="button">Login</button>
         </form>
-        <p>Don't have an account? <a href="signup.html">Sign up here</a></p>
+        <p>Don't have an account? <a href="/signup">Sign up here</a></p>
     </div>
 </body>
 </html>
+
+    
