--- a/templates/signup.html
+++ b/templates/signup.html
@@ -9,6 +9,11 @@
 
 </head>
 <body>
+    <div class="logo-container">
+        <a href="/">
+            <img src="../static/images/logo2.jpeg" alt="Logo" class="rounded-logo">
+        </a>
+    </div>
     <div class="container">
         <h1>Create an Account</h1>
         <form action="/signup" method="POST">
@@ -30,7 +35,7 @@
             </div>
             <button type="submit" class="button">Sign Up</button>
         </form>
-        <p>Already have an account? <a href="login.html">Login here</a></p>
+        <p>Already have an account? <a href="{{ url_for('auth.login') }}">Login here</a></p>
     </div>
 </body>
 </html>
