--- a/static/css/login.css
+++ b/static/css/login.css
@@ -62,3 +62,13 @@ p a:hover {
     font-size: 0.9rem;
     margin-bottom: 10px;
 }
+
+.container {
+    background: rgba(0, 0, 0, 0.7);
+    padding: 30px;
+    border-radius: 15px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
+    text-align: center;
+    width: 100%;
+    max-width: 400px;
+}
