--- a/static/css/new_game.css
+++ b/static/css/new_game.css
@@ -17,9 +17,9 @@ body {
 .container {
     max-width: 600px;
     padding: 20px;
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(0, 0, 0, 0.7);
     border-radius: 15px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -193,4 +193,22 @@ textarea {
     display: block;
     margin-top: 10px;
     resize: vertical;
+}
+
+.logo-container {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+}
+
+.rounded-logo {
+    width: 100px; /* Ajusta el tamaño según tus necesidades */
+    height: 100px; /* Ajusta el tamaño según tus necesidades */
+    border-radius: 50%; /* Esquinas redondeadas */
+    transition: transform 0.3s ease; /* Animación al pasar el mouse */
+}
+
+.rounded-logo:hover {
+    transform: scale(1.1); /* Efecto de zoom al pasar el mouse */
+    cursor: pointer;
 }
