--- a/templates/index.html
+++ b/templates/index.html
@@ -7,13 +7,18 @@
     <link rel="stylesheet" href="../static/css/styles.css">
 </head>
 <body>
+    <div class="logo-container">
+        <a href="/">
+            <img src="../static/images/logo2.jpeg" alt="Logo" class="rounded-logo">
+        </a>
+    </div>
     
     <div class="container">
         <h1>Manatracker</h1>
         <p>Track. Analyze. Win.</p>
         <div class="button-container">
-            <a href="/login" class="button login">Login</a>
-            <a href="/signup" class="button">Sign Up</a>
+            <a href="{{ url_for('auth.signup') }}" class="button login">Login</a>
+            <a href="{{ url_for('auth.login') }}" class="button">Sign Up</a>
         </div>
     </div>
 </body>
