--- a/templates/login.html
+++ b/templates/login.html
@@ -9,9 +9,14 @@
  
 </head>
 <body>
+    <div class="logo-container">
+        <a href="/">
+            <img src="../static/images/logo2.jpeg" alt="Logo" class="rounded-logo">
+        </a>
+    </div>
     <div class="container">
         <h1>Login</h1>
-        <form action="/login" method="POST">
+        <form action="{{ url_for('auth.login') }}" method="POST">
            
             <div class="form-group">
                 <label for="email">Email:</label>
@@ -27,7 +32,7 @@
              {% endif %}
             <button type="submit" class="button">Login</button>
         </form>
-        <p>Don't have an account? <a href="/signup">Sign up here</a></p>
+        <p>Don't have an account? <a href="{{ url_for('auth.signup') }}">Sign up here</a></p>
     </div>
 </body>
 </html>
