--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -16,7 +16,7 @@
             </a>
         </div>
         <a href="/" class="logo">Manatracker</a>
-        <a href="/logout" class="button">Logout</a>
+        <a href="{{ url_for('auth.logout') }}" class="button">Logout</a>
     </header>
     <main>
         <!-- Botón "+ New Game" -->
