--- a/templates/index.html
+++ b/templates/index.html
@@ -17,8 +17,8 @@
         <h1>Manatracker</h1>
         <p>Track. Analyze. Win.</p>
         <div class="button-container">
-            <a href="{{ url_for('auth.signup') }}" class="button login">Login</a>
-            <a href="{{ url_for('auth.login') }}" class="button">Sign Up</a>
+            <a href="{{ url_for('auth.login') }}" class="button login">Login</a>
+            <a href="{{ url_for('auth.signup') }}" class="button">Sign Up</a>
         </div>
     </div>
 </body>
