--- a/templates/signup.html
+++ b/templates/signup.html
@@ -16,7 +16,7 @@
     </div>
     <div class="container">
         <h1>Create an Account</h1>
-        <form action="/signup" method="POST">
+        <form action="{{ url_for('auth.signup') }}" method="POST">
             <div class="form-group">
                 <label for="username">Username:</label>
                 <input type="text" id="username" name="username" placeholder="Choose a username" required>
