--- a/templates/new_game.html
+++ b/templates/new_game.html
@@ -74,7 +74,24 @@
                 Advanced <i class="fa-solid fa-arrow-down-wide-short"></i>
             </div>
 
+            
             <div id="advanced-options" class="hidden">
+
+                <div class="form-group">
+                    <label for="turn_order">Turn Order</label>
+                    <select id="turn_order" name="turn_order" required>
+                        <option value="" disabled selected>Select Turn Order</option>
+                        <option value="1st">1st</option>
+                        <option value="2nd">2nd</option>
+                        <option value="3rd">3rd</option>
+                        <option value="4th">4th</option>
+                        <option value="5th">5th</option>
+                        <option value="6th">6th</option>
+                        <option value="7th">7th</option>
+                        <option value="8th">8th</option>
+                    </select>
+                </div>
+
                 <div class="form-group">
                     <label for="turns">How many turns?</label>
                     <input type="number" id="turns" name="turns">
@@ -113,6 +130,12 @@
                     <label for="sr_turn1">Sol Ring turn one?</label>
                     <input type="checkbox" id="sr_turn1" name="sr_turn1">
                 </div>
+
+                <div class="form-group">
+                    <label for="notes">Additional Notes</label>
+                    <textarea id="notes" name="notes" placeholder="Write any additional notes here..."></textarea>
+                </div>
+
             </div>
 
             <div class="form-actions">
