--- a/templates/new_game.html
+++ b/templates/new_game.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="logo-container">
-        <a href="/">
+        <a href="{{ url_for('games.dashboard') }}">
             <img src="../static/images/logo2.jpeg" alt="Logo" class="rounded-logo">
         </a>
     </div>
