--- a/templates/game_detail.html
+++ b/templates/game_detail.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="logo-container">
-        <a href="/">
+        <a href="{{ url_for('games.dashboard') }}">
             <img src="{{ url_for('static', filename='images/logo2.jpeg') }}" alt="Logo" class="rounded-logo">
 
         </a>
