--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Manatracker - Track. Analyze. Win.</title>
+    <link rel="icon" type="image/x-icon" href="../static/images/logo2.jpeg">
+    
     <link rel="stylesheet" href="../static/css/styles.css">
 </head>
 <body>
