--- a/templates/game_detail.html
+++ b/templates/game_detail.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game Details</title>
+    <link rel="icon" type="image/x-icon" href="../static/images/logo2.jpeg">
+    
     <link rel="stylesheet" href="{{ url_for('static', filename='css/game_detail.css') }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
