--- a/templates/profile.html
+++ b/templates/profile.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile - Manatracker</title>
+    <link rel="icon" type="image/x-icon" href="../static/images/logo2.jpeg">
+    
     <link rel="stylesheet" href="../static/css/profile.css">
+    <link rel="stylesheet" href="../static/css/header.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
